opam-version: "1.2"
maintainer: "ilias.gar@gmail.com"
authors: ["Ilias Garnier"]
homepage: "https://github.com/igarnier/ssh-client"
bug-reports: "https://github.com/igarnier/ssh-client/issues"
dev-repo: ""
license: "MIT"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder"                {build & >= "1.0+beta8"}
  "batteries"
  
]
available: [ ocaml-version >= "4.04.1" ]
descr: "SSH client library"
